tests/macros/list/mask.stderr
error: option `mask` does not exist for kind `list`
 --> $DIR/mask.rs:2:44
  |
2 |     let q = inquisition::questions![list { mask: todo!() }];
  |                                            ^^^^
