tests/macros/list/mask.rs
fn main() {
    let q = inquisition::questions![list { mask: todo!() }];
}
